test/errors/type/collections/set/add.yasl
const x = collections.set()

collections.set().add([], 1)

